# birch-sky

./: .gitignore  CLAUDE.md  Dockerfile.frontend  README.md  coming-soon.html  config.example.yaml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  session.example.yaml  vite.config.js  vitest.config.js
.claude/: settings.json
.github/scripts/: apply_fixes.py  check_reviews.py  collect_feedback.py  count_iterations.py  design_review.py  persona_review.py
.github/workflows/: design-review.yml  fix-loop.yml  persona-reviews.yml  test.yml
agent_prepper/: __main__.py  config.py  pyproject.toml  session.py
arch/: annotations.md  schema.ts
arch/diagrams/: system.mmd
deploy/: .gitignore  docker-compose.prod.yml  env.example  nginx-ie.conf  setup.sh
docs/plans/: mvp_architecture.md  (+3 more)
eval/: __main__.py  cli.py  config.eval.example.yaml  diff.py  harness.py  ie_eval  judge.py  mechanical.py  paths.py  report.py  scaffold.py  show.py  validate.py
fin/: find_500k_paths.py  marketplace_model.yaml  requirements.txt  run_model.py  scenario_runner.py
harness/: Dockerfile  __main__.py  api.py  config.py  pyproject.toml  runner.py  session.py  tools.py  transcript.py
monitoring/: docker-compose.yml
orchestrator/: agent.py  claude_cli.py  context.py  linear.py  main.py  models.py  review.py  taskqueue.py
scripts/: claude-worktree-cleanup.sh  claude-worktree.sh  review-loop.sh
specs/: mvp-end-to-end.md
src/: api-client.js  chat.js  demo-flow.js  main.js  mock-data.js  mock-data.test.js  scene.js  sprites.js  styles.css
(+183 files in other folders)
