[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ie-agent-prepper"
version = "0.1.0"
description = "Pre-entry clarification microservice for the Information Exchange"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.87.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_prepper*"]
